--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,69 @@ body{
 h1{
     color: black;
 }
+
+.container{
+    
+    display: flex;
+    margin-left: 50px;
+    margin-right: 50px;
+    position: relative;
+}
+
+.box{
+    box-sizing: border-box;
+    padding: 150px;
+    position: relative;
+    width: calc(50% - 10px);
+    /*border: 1px solid #000;*/
+    /*margin-right: 10px;*/
+}
+
+.box:last-child{
+    /*margin-right: 0;*/
+}
+
+.box1{
+    background-color: rgb(225, 243, 250);
+}
+
+.box2{
+    background-color: rgb(220, 183, 183);
+}
+
+.profile-img {
+    position: absolute;
+    top: -50px; /* Adjust this value as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px; /* Set desired width of the image */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.dotted-lines{
+    position: absolute;
+    top: 100%;
+    left:100%;
+    transform: translate(-5px, 5px);
+    width: 10px;
+    height: 10px;
+
+}
+
+.dotted-right{
+    border-right: 5px dotted black;
+    height: 100px;
+}  
+
+.dotted-bottom {
+    border-bottom: 5px dotted black; /* Create bottom dotted line */
+    width: 100px; /* Adjust width for visual effect */
+    position: absolute;
+    top: 100%; /* Align below the image */
+    left: 0; /* Keep aligned to the left */
+}
+
+
+
+ 
+
