--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,8 @@ section{
 
 .logo{
     color: white;
-    font-size: 24px;
+    font-size: 40px;
+    font-weight: bolder;
 }
 
 .navbar{
@@ -186,7 +187,7 @@ section{
     background-color: black;
     color: white;
     font-size: 15px;
-    margin: 0 auto;
+    margin-top: 15px;
     padding: 10px 10px;
 
 }
